[package]
name = "api_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
url = "2.2.2"
serde = "1.0.133"
serde_json = "1.0.74"